[package]
name = "bp-esplora"
version = "0.11.0-beta.7"
edition = "2018"
authors = ["Alekos Filini <alekos.filini@gmail.com>", "Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
homepage = "https://github.com/BP-WG/bp-esplora-client"
repository = "https://github.com/BP-WG/bp-esplora-client"
documentation = "https://docs.rs/bp-esplora/"
description = "Bitcoin Esplora API client library not using rust-bitcoin. Blocking or async"
keywords = ["bitcoin", "esplora"]
readme = "README.md"

[lib]
name = "esplora"
path = "src/lib.rs"

[dependencies]
amplify = { version = "4.7.0", features = ["serde"] }
sha2 = "0.10.8"
bp-std = { version = "0.11.0-beta.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.9", features = ["hex"] }
log = "^0.4"
ureq = { version = "2.10.1", features = ["json"], optional = true }
reqwest = { version = "0.12.5", optional = true, default-features = false, features = ["json"] }

[features]
default = ["blocking", "async", "async-https"]
all = ["blocking"]
blocking = ["ureq", "ureq/socks-proxy"]
async = ["reqwest", "reqwest/socks"]
async-https = ["async", "reqwest/default-tls"]
async-https-native = ["async", "reqwest/native-tls"]
async-https-rustls = ["async", "reqwest/rustls-tls"]
async-https-rustls-manual-roots = ["async", "reqwest/rustls-tls-manual-roots"]
